--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -23192,7 +23192,7 @@ The @code{GAL_POLYGON_MAX_CORNERS} macro is defined so there will be no need to 
 Since we are dealing with pixels, the polygon can't really have too many vertices.
 @end deftypefun
 
-@deftypefun int gal_polygon_isconvex(double @code{*v}, size_t @code{n})
+@deftypefun int gal_polygon_is_convex(double @code{*v}, size_t @code{n})
 Returns @code{1} if the polygon is convex with vertices defined by @code{v} and @code{0} if it is a concave polygon.
 Note that the vertices of the polygon should be sorted in an anti-clockwise manner.
 @end deftypefun
@@ -23202,22 +23202,34 @@ Find the area of a polygon with vertices defined in @code{v}.
 @code{v} points to an array of doubles which keep the positions of the vertices such that @code{v[0]} and @code{v[1]} are the positions of the first vertice to be considered.
 @end deftypefun
 
-@deftypefun int gal_polygon_isinside(double @code{*v}, double @code{*p}, size_t @code{n})
+@deftypefun int gal_polygon_is_inside(double @code{*v}, double @code{*p}, size_t @code{n})
 Returns @code{0} if point @code{p} in inside a polygon, either convex or concave.
 The vertices of the polygon are defined by @code{v} and @code{0} otherwise, they have to be ordered in an anti-clockwise manner.
 This function uses the @url{https://en.wikipedia.org/wiki/Point_in_polygon#Winding_number_algorithm, winding number algorithm}, to check the points.
-Note that this is a generic function (working on both concave and convex polygons, so if you know before-hand that your polygon is convex, it is much more efficient to use @code{gal_polygon_isinside_convex}.
+Note that this is a generic function (working on both concave and convex polygons, so if you know before-hand that your polygon is convex, it is much more efficient to use @code{gal_polygon_is_inside_convex}.
 @end deftypefun
 
-@deftypefun int gal_polygon_isinside_convex (double @code{*v}, double @code{*p}, size_t @code{n})
+@deftypefun int gal_polygon_is_inside_convex (double @code{*v}, double @code{*p}, size_t @code{n})
 Return @code{1} if the point @code{p} is within the polygon whose vertices are defined by @code{v}.
-The polygon is assumed to be convex, for a more generic function that deals with concave and convex polygons, see @code{gal_polygon_isinside}.
+The polygon is assumed to be convex, for a more generic function that deals with concave and convex polygons, see @code{gal_polygon_is_inside}.
 Note that the vertices of the polygon have to be sorted in an anti-clock-wise manner.
 @end deftypefun
 
 @deftypefun int gal_polygon_ppropin (double @code{*v}, double @code{*p}, size_t @code{n})
-Similar to @code{gal_polygon_isinside_convex}, except that if the point @code{p} is on
+Similar to @code{gal_polygon_is_inside_convex}, except that if the point @code{p} is on
 one of the edges of a polygon, this will return @code{0}.
+@end deftypefun
+
+@deftypefun int gal_polygon_is_counterclockwise(double @code{*v}, size_t @code{n})
+Returns  @code{1} if polygon is sorted in anti-clockwise and @code{0} otherwise.
+It uses winding which defines the relative order in which the vertices of a polygon are listed to determine the orientation of vertices.
+If orientation is positive vertices are in clockwise direction, else is negative for anti-clockwise direction. Zero sum implies a figure like @code{8}, with equal orientation in both direction.
+@end deftypefun
+
+@deftypefun int gal_polygon_to_counterclockwise(double @code{*v}, size_t @code{n})
+Arrange the vertices of polygon in counter-clockwise direction if input is in clockwise direction, otherwise do nothing.
+It uses @code{gal_polygon_is_counterclockwise} to determine the orientation of polygons.
+Return @code{1} on successful execution, @code{0} otherwise.
 @end deftypefun
 
 @deftypefun void gal_polygon_clip (double @code{*s}, size_t @code{n}, double @code{*c}, size_t @code{m}, double @code{*o}, size_t @code{*numcrn})
