Crop: input polygon not sorted by default, must use --polygonsort
Until now, polygon sorting was done by default and the users had to use the
`--polygonnosort' option to disable it. But this is very un-intuitive,
especially when the input is a concave polygon (where the sorted result may
be different). It is just necessary to make sure the polygon's orientation
is counterclockwise.

With this commit, the added functions in the previous commit are used to
reveerse the input polygon vertices into a counter-clockwise orientation by
default (if necessary!), but it will not re-arrange the polygon vertices
beyond that. If the user knows that their points may not be sorted properly
and would like to have the old behavior of sorting the vertices, they can
use the new `--polygonsort' option.

While doing this, I also cleaned up the two newly added functions
(`gal_polygon_is_counterclockwise' and `gal_polygon_to_counterclockwise')
of the previous commit. In particular, since the output of
`gal_polygon_is_counterclockwise' is a binary, the `switch' statement was
replaced with a simple `if' statement.

This completes task #15578.

--- a/NEWS
+++ b/NEWS
@@ -19,12 +19,12 @@ See the end of the file for license conditions.
 
   Crop:
    --polygon: can now also crop concave polygons (when atleast one inner
-     angle is more than 180 degrees).
-   --polygonnosort: Don't sort the given set of vertices to the `--polygon'
-     option. For a concave polyton, this is redundant, but for a convex
-     polygon, this option may be necessary because there is no unique
-     solution and if automatic sorting is not disabled, the output polygon
-     may not correspond to what you wanted (the vertices will the correct).
+     angle is more than 180 degrees). Concave polygons occur a lot in deep
+     astronomical imaging: in the shape of the deepest regions.
+   --polygonsort: Sort the given set of vertices to the `--polygon'
+     option. For a concave polyton, the sorting will be correct, but for a
+     convex polygon, there is no unique solution/sorting, so it may not be
+     what you expect, see the manual.
 
   Fits:
    --datasum: Calculate and print the given HDU's "datasum" to stdout.
@@ -53,8 +53,10 @@ See the end of the file for license conditions.
    - GAL_SPECLINES_INVALID_MAX: Total number of spectral lines, plus 1.
    - GAL_ARITHMETIC_OP_QUANTILE: operator for `gal_arithmetic'.
    - gal_txt_trim_space: trim white space before and after a string.
-   - gal_polygon_isconvex: identify if a polygon is convex or concave.
-   - gal_polygon_isinside: if point is inside polygon (convex or concave).
+   - gal_polygon_is_convex: identify if a polygon is convex or concave.
+   - gal_polygon_is_inside: if point is inside polygon (convex or concave).
+   - gal_polygon_is_counterclockwise: check if polygon is counter-clockwise.
+   - gal_polygon_to_counterclockwise: convert to counter-clockwise if it isn't.
 
 ** Removed features
 
@@ -77,7 +79,9 @@ See the end of the file for license conditions.
      printing the problematic string and its location.
 
   Crop:
-   - `--polygonout' is the new name for `--outpolygon'. Having `polygon' at
+   --polygon: by default it will no longer attempt to sort the polygon
+     vertices, sorting can be requested with the new `--polygonsort' option.
+   --polygonout: is the new name for `--outpolygon'. Having `polygon' at
      the start of the option name, makes it easier to find in the help list
      and also to understand generally.
 
@@ -90,7 +94,7 @@ See the end of the file for license conditions.
      extensions will be measured over all the tiles.
 
   Library:
-   - gal_polygon_isinside_convex: new name for `gal_polygon_pin'.
+   - gal_polygon_is_inside_convex: new name for `gal_polygon_pin'.
 
 ** Bugs fixed
   bug #57300: MakeCatalog memory crash when input dataset has units.
