Arithmetic: --wcsfile option accepts a none value
Until now there was no clean way to remove the WCS of a given FITS
file. With this commit, the Arithmetic program's `--wcsfile' option can be
given a value of `none'. In this situation, no WCS will be read/written in
the output.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ See the end of the file for license conditions.
   Arithmetic:
    - New `quantile' operator for coadding datasets.
    - New `size' operator to report length of dataset in requested dimension.
+   - When `--wcsfile' is given the value `none', output will not have any WCS.
 
   CosmicCalculator:
    --listlines: list the pre-defined spectral line wavelengths and names
